[package]
name = "bevy_fly_camera"
version = "0.8.0"
authors = ["mcpar-land"]
edition = "2021"
exclude = [".vscode/**"]
description = "A basic flying camera in Bevy"
license = "MIT"
repository = "https://github.com/mcpar-land/bevy_fly_camera"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
